# utils

./: .gitignore  ADVANCED.md  LICENSE.txt  README.md  USAGE.md  pyproject.toml
.github/workflows/: python.yml
node-ts/: .gitignore  .prettierrc  README.md  ca-cert.crt.pem  ca-cert.key.pem  package.json  tsconfig.json  tsconfig.tsbuildinfo  tslint.json
node-ts/src/: create-ca-cert.ts  create-device-cert.ts
python/: create_proxy_jwt.py
python/modem-firmware-1.3+/: README.md  at_keygen_csr_parser.py  ca_certs.py  claim_and_provision_device.py  cli_helpers.py  command_interface.py  create_ca_cert.py  create_device_credentials.py  device_credentials_installer.py  gather_attestation_tokens.py  modem_credentials_parser.py  nrf_cloud_device_mgmt.py  nrf_cloud_diap.py  nrf_cloud_provision.py  requirements.txt  rtt_interface.py  serial_interface.py
src/nrfcloud_utils/: ca_certs.py  claim_and_provision_device.py  claim_devices.py  cli.py  cli_helpers.py  command_interface.py  comms.py  create_ca_cert.py  create_device_credentials.py  create_proxy_jwt.py  device_credentials_installer.py  gather_attestation_tokens.py  modem_credentials_parser.py  nRF93_onboard.py  nordic_boards.py  nrf91_gather_self_signed_certs.py  nrf93_onboard.py  nrf_cloud_device_mgmt.py  nrf_cloud_diap.py  nrf_cloud_onboard.py  rtt_interface.py
src/utils/: claim_and_provision_device.py  claim_devices.py  create_ca_cert.py  device_credentials_installer.py  modem_credentials_parser.py  nrf_cloud_device_mgmt.py  nrf_cloud_diap.py  rtt_interface.py
tests/: test_claim_and_provision_device.py  test_comms.py  test_create_ca_cert.py  test_create_device_credentials.py  test_device_credentials_installer.py  test_gather_attestation_tokens.py  test_modem_credentials_parser.py  test_nRF93_onboard.py  test_nrf91_gather_self_signed_certs.py
tests/fixtures/: example-id_csr.pem  test_ca.pem  test_ca_prv.pem
