[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "nrfcloud-utils"
version = "0.0.1"
description = "Scripts and utilities for working with the nRF Cloud"
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "Nordic Semiconductor ASA" }
]
dependencies = [
    "cbor2>=5.4.2.post1",
    "cryptography>=46.0.5",
    "cffi>=2.0.0",
    "requests>=2.32.0",
    "urllib3>=2.2.2",
    "semver>=3.0.0",
    "pyjwt>=2.3.0",
    "inquirer>=3.4.0",
    "nrfcredstore>=2.0.9",
]

[project.urls]
repository = "https://github.com/nRFCloud/utils"

[project.scripts]
nrfcloud-utils = "nrfcloud_utils.cli:run"
claim_and_provision_device = "nrfcloud_utils.claim_and_provision_device:run"
claim_devices = "nrfcloud_utils.claim_devices:run"
create_ca_cert = "nrfcloud_utils.create_ca_cert:run"
create_device_credentials = "nrfcloud_utils.create_device_credentials:run"
create_proxy_jwt = "nrfcloud_utils.create_proxy_jwt:run"
device_credentials_installer = "nrfcloud_utils.device_credentials_installer:run"
gather_attestation_tokens = "nrfcloud_utils.gather_attestation_tokens:run"
modem_credentials_parser = "nrfcloud_utils.modem_credentials_parser:run"
nrf_cloud_device_mgmt = "nrfcloud_utils.nrf_cloud_device_mgmt:run"
nrf_cloud_onboard = "nrfcloud_utils.nrf_cloud_onboard:run"
nrf93_onboard = "nrfcloud_utils.nrf93_onboard:run"

[dependency-groups]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.0.0",
    "pytest-watch>=4.2.0",
    "poetry (>=2.3.4,<3.0.0)",  # used for development today. might be migrated to uv in the future.
]

[tool.poetry]
packages = [
    { include = "nrfcloud_utils", from = "src" }
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
